Bootstrap for ManagerBundle

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/actions.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/actions.html.twig
@@ -3,9 +3,10 @@
         'url': url('mapbender_manager_application_new'),
         'title': 'Create new application',
         'attr': {
-            'class': 'primary'
+            'class': 'btn btn-primary'
         }
     }
 }
 %}
 {% include "MapbenderManagerBundle::actions.html.twig" %}
+
