--- a/src/Mapbender/ManagerBundle/Resources/views/Manager/menu.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Manager/menu.html.twig
@@ -6,4 +6,11 @@
     </li>
 {% endfor %}
 </ul>
+<div id="manager-user-menu">
+    <p>{{ "You're logged in as"|trans}} <em>user</em>:</p>
+    <ul>
+        <li id="manager-account"><a href="#">{{ "Your Account"|trans }}</a></li>
+        <li id="manager-logout"><a href="#">{{ "Logout"|trans }}</a></li>
+    </ul>
+</div>
 
