--- a/src/Mapbender/ManagerBundle/Resources/public/css/style.css
+++ b/src/Mapbender/ManagerBundle/Resources/public/css/style.css
@@ -42,40 +42,35 @@ header[role="navigation"] a {
 }
 
 div[role="main"] {
-    width: 700px;
-    padding: 0 10px;
+    width: 680px;
+    padding: 20px;
     display: table-cell;
 }
 
+div[role="main"] > h1 {
+    margin-bottom: 1em;
+    text-shadow: 1px 1px 0px #aaa;
+}
+
+/**
+ * Global sidebar search
+ */
+
 form#manager-search {
-    padding: 10px 10px;
+    text-align: right;
+    margin: 1em 0;
 }
 
 form#manager-search input {
-    border: 1px solid #409518;
-    background: #bbb;
-    display: block;
-    width: 157px;
-    padding: 5px 16px 5px 5px;
-
-    -webkit-transition: all 300ms ease-in-out;
-    -moz-transition: all 300ms ease-in-out;
-    -o-transition: all 300ms ease-in-out;
-    -ms-transition: all 300ms ease-in-out;
+    width: 150px;
 }
 
-form#manager-search input:hover {
-    background: #ddd;
-}
-
-form#manager-search input:focus {
-    border: 1px solid #54d40f;
-    background: #ddd;
-}
+/**
+ * Manager menu in the sidebar
+ */
 
 header[role="navigation"] nav ul {
     margin-right: -20px;
-    margin-top: 20px;
     margin-left: -10px;
 }
 
@@ -115,30 +110,18 @@ header[role="navigation"] nav li.active a {
     margin-right: -4px;
 }
 
-div.flash {
-    margin-bottom: 1em;
-    padding: 0.5em;
+#manager-user-menu {
+    margin-top: 1em;
 }
 
-form label {
-    display: block;
-    font-size: 0.875em;
-    font-weight: bold;
-    color: #777;
+#manager-user-menu p {
+    margin: 0;
+    text-align: right;
 }
 
-form label.required {
-    color: #333;
-}
-
-form input[type="text"],
-form textarea,
-form .CodeMirror {
-    border: 1px solid #333;
-    padding: 0.25em;
-    width: 100%;
-}
-
+/**
+ * General form styles
+ */
 .CodeMirror .activeline {
     background: #f0fcff !important;
 }
@@ -147,110 +130,40 @@ form textarea {
     height: 4em;
 }
 
-form p.help {
-    margin: 0 0 1em 0;
-    font-size: 0.75em;
-    color: #888;
-}
-
-form div.actions {
-    margin: 2em;
-}
-
-form div.tabbed {
-    background: none;
-    border: none;
-}
-
-form div.tabbed ul.form-tabs {
-    border-width: 0 0 1px 0;
-    background: none;
-}
-
-form div.tabbed section.ui-tabs-panel {
-    padding: 1em 0;
-}
-
-table.datasheet {
-    border: 1px solid #aaa;
-    width: 100%;
-    background: #eee;
-}
-
-table.datasheet thead th {
-    padding: 0.5em;
-    background: #cccccc url(images/ui-bg_highlight-soft_50_cccccc_1x100.png) 50% 50% repeat-x;
-    border: 1px solid #aaa;
-}
-
-table.datasheet td {
-    border: 1px solid #aaa;
-    padding: 0.5em;
-}
-
-table.datasheet td.app-id {
-    text-align: center;
-}
-
-table.datasheet a {
-    color: #333;
+form footer {
+    margin-top: 1em;
+    border-top: 1px solid #ddd;
+    padding-top: 1em;
 }
 
 /**
- * Action buttons CSS
+ * Fixes for h5bp + bootstrap
  */
-
-.actions a,
-.actions input {
-    padding: 0.5em 1em;
-
-    background: #e8e8e8;
-
-    color: #333;
-    font-weight: bold;
-
-    border: 1px solid #888;
-    border-radius: 3px;
-    -webkit-border-radius: 3px;
-    -khtml-border-radius: 3px;
-    -moz-border-radius: 3px;
+.btn:visited {
+    color: #000;
 }
 
-.actions a:hover,
-.actions input:hover {
-    background: #dbdbdb;
-}
-
-.actions a.primary {
-    background: #63C450;
-    border-color: #3B742F;
+.btn-primary:visited, .btn-warning:visited, .btn-danger:visited,
+.btn-success:visited, .btn-info:visited, .btn-inverse:visited {
     color: #fff;
 }
 
-.actions a.primary:hover {
-    background: #3B742F;
-    border-color: #22421B;
+form.well ul.nav-tabs li.active a {
+    background: #f5f5f5;
 }
 
-.actions input.danger {
-    background: #d47e13;
-    border-color: #553307;
+/**
+ * Entity actions
+ */
+div.entity-actions {
+    opacity: 0.2;
+
+    -webkit-transition: all 300ms ease-in-out;
+    -moz-transition: all 300ms ease-in-out;
+    -o-transition: all 300ms ease-in-out;
+    -ms-transition: all 300ms ease-in-out;
 }
 
-.actions input.danger:hover {
-    background: #be4111;
-}
-
-ul.repository-actions {
-    padding: 0;
-    list-style-type: none;
-    margin: 2em 0;
-}
-
-ul.repository-actions a {
-    text-decoration: none;
-}
-
-form#entity-delete footer.actions {
-    margin: 2em 0;
+div.entity-actions:hover {
+    opacity: 1.0;
 }
