--- a/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
@@ -3,7 +3,6 @@
 {% block title %}{{ "New application" | trans}}{% endblock %}
 
 {% block manager_css %}
-<link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendermanager/css/jquery-ui-1.8.16.css') }}" />
 <link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendermanager/codemirror2/lib/codemirror.css') }}" />
 {% endblock %}
 
@@ -13,13 +12,23 @@
 <script type="text/javascript" src="{{ asset('bundles/mapbendermanager/codemirror2/mode/yaml/yaml.js') }}"></script>
 {% endblock %}
 
+{% set form_errors = form_errors(form) %}
+
 {% block manager_content %}
 
 <form action="{{ path('mapbender_manager_application_create') }}" method="post" {{ form_enctype(form)}}>
-    {%include "MapbenderManagerBundle:Application:form.html.twig" %}
+    {% if form_errors(form) %}
+    <div class="alert alert-error">
+        {{ form_errors(form) }}
+    </div>
+    {% endif %}
+
+    {{ form_row(form._token) }}
+
+    {%include "MapbenderManagerBundle:Application:form-basic.html.twig" %}
     <footer>
-        <input type="submit" value="{{ 'Create' | trans }}" />
-        <a href="{{ url('mapbender_manager_application_index') }}">{{ 'Cancel' | trans}}</a>
+        <input type="submit" value="{{ 'Create' | trans }}" class="btn btn-primary"/>
+        <a href="{{ url('mapbender_manager_application_index') }}" class="btn">{{ 'Cancel' | trans}}</a>
     </footer>
 </form>
 
