Form theme cleanup

--- a/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
@@ -16,7 +16,7 @@
 
 {% block manager_content %}
 
-<form action="{{ path('mapbender_manager_application_create') }}" method="post" {{ form_enctype(form)}}>
+<form action="{{ path('mapbender_manager_application_create') }}" method="post" {{ form_enctype(form)}} class="well">
     {% if form_errors(form) %}
     <div class="alert alert-error">
         {{ form_errors(form) }}
