--- a/src/Mapbender/ManagerBundle/Resources/public/css/style.css
+++ b/src/Mapbender/ManagerBundle/Resources/public/css/style.css
@@ -167,3 +167,19 @@ div.entity-actions {
 div.entity-actions:hover {
     opacity: 1.0;
 }
+
+/**
+ * Subentity selection modal
+ */
+.modal .element {
+    cursor: pointer;
+    padding: 0.5em;
+}
+
+.modal .element:hover {
+    background: #f5f5f5;
+}
+
+.modal .element.selected {
+    background: #5bb75b
+}
