--- a/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/edit.html.twig
@@ -25,4 +25,23 @@
     </footer>
 </form>
 
+<div id="modal-application-elements" class="modal fade hide">
+    <div class="modal-header">
+        <a class="close" data-dismiss="modal">×</a>
+        <h3>{{ 'Select element class' | trans }}</h3>
+    </div>
+    <div class="modal-body">
+        {% for class, element in available_elements %}
+        <div class="element" data-class="{{ class }}" data-tags="{{ element.tags | join(' ') | lower }}">
+            <h4>{{ element.title | trans }}</h4>
+            <p>{{ element.description | trans }}</p>
+        </div>
+        {% endfor %}
+    </div>
+    <div class="modal-footer">
+        <a href="#" data-dismiss="modal" class="btn">{{ 'Close' | trans }}</a>
+        <a href="#" data-dismiss="modal" class="btn btn-primary">{{ 'Select Element' | trans }}</a>
+    </div>
+</div>
+
 {% endblock %}
