ManagerBundle Application management with entity based application & elements

--- a/src/Mapbender/CoreBundle/Resources/views/backend.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/backend.html.twig
@@ -25,8 +25,7 @@
         <!-- TODO: Make menu more dynamic -->
         <ul class="clearfix">
             <li><a href="{{ path('mapbender_core_application_list') }}" id="mapbendercore-applications-admin">Apps</a></li>
-            <li><a href="{{ path('mapbender_wms_wms_index')}}" id="mapbendercore-services-admin">Services</a></li>
-            <li><a href="" id="mapbendercore-user-admin">Users</a></li>
+            <li><a href="{{ path('mapbender_manager_manager_index')}}" id="mapbendermanager">Manager</a></li>
             <li><a href="http://mapbender3.org/Handbook" id="mapbendercore-help-book">Handbook</a></li>
             <li><a href="" id="mapbendercore-user-account">My Account</a></li>
             <li><a href="" id="mapbendercore-user-logout">Logout</a></li>
