--- a/src/Mapbender/ManagerBundle/Resources/views/Element/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Element/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends "MapbenderManagerBundle::manager.html.twig" %}
 
-{% block title %}{{ "New application" | trans}}{% endblock %}
+{% block title %}{{ "Edit Element" | trans}}{% endblock %}
 
 {% block manager_css %}
 <link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendermanager/codemirror2/lib/codemirror.css') }}" />
@@ -16,7 +16,7 @@
 
 {% block manager_content %}
 
-<form action="{{ path('mapbender_manager_application_create') }}" method="post" {{ form_enctype(form)}} class="well">
+<form action="{{ path('mapbender_manager_element_update', { 'app_id': application.entity.id, 'id': element.id }) }}" method="post" {{ form_enctype(form)}} class="well">
     {% if form_errors(form) %}
     <div class="alert alert-error">
         {{ form_errors(form) }}
@@ -24,11 +24,13 @@
     {% endif %}
 
     {{ form_row(form._token) }}
+    {{ form_row(form.class) }}
+    {{ form_row(form.region) }}
 
-    {%include "MapbenderManagerBundle:Application:form-basic.html.twig" %}
+    {%include "MapbenderManagerBundle:Element:form.html.twig" %}
     <footer>
-        <input type="submit" value="{{ 'Create' | trans }}" class="btn btn-primary"/>
-        <a href="{{ url('mapbender_manager_application_index') }}" class="btn">{{ 'Cancel' | trans}}</a>
+        <input type="submit" value="{{ 'Update' | trans }}" class="btn btn-primary"/>
+        <a href="{{ url('mapbender_manager_application_edit', {'id': application.entity.id}) }}" class="btn">{{ 'Cancel' | trans}}</a>
     </footer>
 </form>
 
