--- a/src/Mapbender/ManagerBundle/Resources/views/Manager/menu.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Manager/menu.html.twig
@@ -7,10 +7,10 @@
 {% endfor %}
 </ul>
 <div id="manager-user-menu">
-    <p>{{ "You're logged in as"|trans}} <em>user</em>:</p>
+    <p>{{ "You're logged in as"|trans}} <em>{{ app.user.username }}</em>:</p>
     <ul>
         <li id="manager-account"><a href="#">{{ "Your Account"|trans }}</a></li>
-        <li id="manager-logout"><a href="#">{{ "Logout"|trans }}</a></li>
+        <li id="manager-logout"><a href="{{ url('mapbender_core_user_logout') }}">{{ "Logout"|trans }}</a></li>
     </ul>
 </div>
 
