--- a/src/Mapbender/ManagerBundle/Resources/views/manager.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/manager.html.twig
@@ -60,6 +60,8 @@
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ asset('bundles/mapbendermanager/js/jquery-1.7.1.js') }}"><\/script>')</script>
+    <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
+    <script>window.jQuery || document.write('<script src="{{ asset('bundles/mapbendermanager/js/jquery-ui-1.8.16.min.js') }}"><\/script>')</script>
     <script src="{{ asset('bundles/mapbendermanager/bootstrap/js/bootstrap.js')}}"></script>
     {% block manager_js %}{% endblock %}
 </body>
