--- a/src/Mapbender/CoreBundle/Resources/views/Element/map.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/map.html.twig
@@ -11,10 +11,10 @@
 </div>
 <div id="mb-zoom-coordinate-dialog" title="Zoom to coordinate">
     <fieldset>
-      <label for="mb-zoom-coordinate-x">X coordinate:</label>
+      <label for="mb-zoom-coordinate-x">{{ "X coordinate"|trans }}:</label>
       <input type="text" name="x" id="mb-zoom-coordinate-x" class="text ui-widget-content ui-corner-all" />
       <br></br>
-      <label for="mb-zoom-coordinate-y">Y coordinate:</label>
+      <label for="mb-zoom-coordinate-y">{{ "Y coordinate"|trans }}:</label>
       <input type="text" name="y" id="mb-zoom-coordinate-y" value="" class="text ui-widget-content ui-corner-all" />
     </fieldset>
 </div>
