--- a/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
@@ -9,10 +9,11 @@
     <div class="zoom">
         <div class="zoom-prev">
             <a title="{{ "Go back" | trans }}"></a>
-        </div><div class="zoom-next">
+        </div>
+        <div class="zoom-next">
             <a title="{{ "Go forward" | trans }}"></a>
         </div>
-
+        
         <div class="zoom-box">
             <a title="{{ "Zoom by box" | trans }}"></a>
         </div>
