--- a/src/Mapbender/CoreBundle/Resources/views/Element/feature_info.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/feature_info.html.twig
@@ -1,1 +1,1 @@
-<a class="mb-element mb-element-featureinfo" id="{{ id }}">FeatureInfo</a>
+<a class="mb-element mb-element-featureinfo" id="{{ id }}">{{ "FeatureInfo"|trans }}</a>
