--- a/src/Mapbender/ManagerBundle/Resources/views/manager.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/manager.html.twig
@@ -51,6 +51,8 @@
     <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ asset('bundles/mapbendermanager/js/jquery-ui-1.8.16.min.js') }}"><\/script>')</script>
     <script src="{{ asset('bundles/mapbendermanager/bootstrap/js/bootstrap.js')}}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/fosjsrouting/js/router.js') }}"></script>
+    <script type="text/javascript" src="{{ path('fos_js_routing_js', {"callback": "fos.Router.setData"}) }}"></script>
     {% block manager_js %}{% endblock %}
 </body>
 </html>
