--- a/src/Mapbender/ManagerBundle/Resources/views/Role/form-users.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Role/form-users.html.twig
@@ -1,1 +1,5 @@
+{% if not role.mpttLeft == 1 %}
 {{ form_row(form.users) }}
+{% else %}
+<p>{{ 'This role is applied to every user.' | trans }}
+{% endif %}
