--- a/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/new.html.twig
@@ -18,7 +18,7 @@
 <p>{% trans %}Create a new application by providing basic information and then
 use the edit mode to add elements, layers and security.{% endtrans %}</p>
 
-<form action="{{ path('mapbender_manager_application_create') }}" method="post" {{ form_enctype(form)}} class="well">
+<form action="{{ path('mapbender_manager_application_create') }}" method="post" name="{{ form_name }}" {{ form_enctype(form)}} class="well">
     {% if form_errors(form) %}
     <div class="alert alert-error">
         {{ form_errors(form) }}
