--- a/src/Mapbender/ManagerBundle/Resources/views/Role/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Role/edit.html.twig
@@ -2,9 +2,13 @@
 
 {% block title %}{{ "Edit Role" | trans}}{% endblock %}
 
+{% block manager_js %}
+    <script type="application/javascript" src="{{ asset('bundles/mapbendermanager/js/form.js') }}"></script>
+{% endblock %}
+
 {% block manager_content %}
 
-<form action="{{ path('mapbender_manager_role_update', { 'id': role.id }) }}" method="post" {{ form_enctype(form)}} class="well">
+<form action="{{ path('mapbender_manager_role_update', { 'id': role.id }) }}" method="post" name="{{ form_name }}" {{ form_enctype(form)}} class="well">
     {% if form_errors(form) %}
     <div class="alert alert-error">
         {{ form_errors(form) }}
