--- a/src/Mapbender/ManagerBundle/Resources/views/Application/delete.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Application/delete.html.twig
@@ -1,7 +1,7 @@
 {% extends "MapbenderManagerBundle::manager.html.twig" %}
 
-{% set application_title = application.entity.title %}
-{% set application_id = application.entity.id %}
+{% set application_title = application.title %}
+{% set application_id = application.id %}
 
 {% block title %}{% trans %}Delete application %application_title%{% endtrans %}{% endblock %}
 
@@ -9,20 +9,18 @@
 <link rel="stylesheet" type="text/css" href="{{ asset('bundles/mapbendermanager/css/jquery-ui-1.8.16.css') }}" />
 {% endblock %}
 
-{% block manager_js %}
-<script type="text/javascript" src="{{ asset('bundles/mapbendermanager/js/form.js') }}"></script>
-{% endblock %}
-
 {% block manager_content %}
 
-<form id="entity-delete" action="{{ path('mapbender_manager_application_delete', { 'id': application.entity.id }) }}" method="post" {{ form_enctype(form)}}>
+<form id="application-delete" action="{{ path('mapbender_manager_application_delete', { 'slug': application.slug }) }}" method="post" {{ form_enctype(form)}}>
     <header>
     {% trans %}Do you really want to delete the application with the title <em>%application_title%</em> and the id <em>%application_id%</em>?{% endtrans %}
     </header>
     {{ form_widget(form) }}
     <footer class="actions">
-        <input type="submit" value="{{ 'Delete' | trans }}" class="btn btn-danger"/>
-        <a href="{{ url('mapbender_manager_application_index') }}" class="btn">{{ 'Cancel' | trans}}</a>
+        <div class="btn-group">
+            <input type="submit" value="{{ 'Delete' | trans }}" class="btn btn-danger"/>
+            <a href="{{ url('mapbender_manager_application_index') }}" class="btn">{{ 'Cancel' | trans}}</a>
+        </div>
     </footer>
 </form>
 
