--- a/src/Mapbender/ManagerBundle/Resources/views/Role/edit.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Role/edit.html.twig
@@ -22,8 +22,11 @@
     {% include 'MapbenderManagerBundle:Role:form.html.twig' %}
 
     <footer>
-        <input type="submit" value="{{ 'Update' | trans }}" class="btn btn-primary"/>
-        <a href="{{ url('mapbender_manager_role_index') }}" class="btn">{{ 'Cancel' | trans}}</a>
+        <div class="btn-group">
+            <input type="submit" value="{{ 'Update' | trans }}" class="btn btn-primary"/>
+            <a href="{{ url('mapbender_manager_role_confirmdelete', { 'id': role.id }) }}" class="btn btn-warning">{{ 'Delete' | trans }}</a>
+            <a href="{{ url('mapbender_manager_role_index') }}" class="btn">{{ 'Cancel' | trans}}</a>
+        </div>
     </footer>
 </form>
 
