--- a/src/Mapbender/ManagerBundle/Resources/views/Role/new.html.twig
+++ b/src/Mapbender/ManagerBundle/Resources/views/Role/new.html.twig
@@ -19,8 +19,10 @@
     {% include 'MapbenderManagerBundle:Role:form.html.twig' %}
 
     <footer>
-        <input type="submit" value="{{ 'Create' | trans }}" class="btn btn-primary"/>
-        <a href="{{ url('mapbender_manager_role_index') }}" class="btn">{{ 'Cancel' | trans}}</a>
+        <div class="btn-group">
+            <input type="submit" value="{{ 'Create' | trans }}" class="btn btn-primary"/>
+            <a href="{{ url('mapbender_manager_role_index') }}" class="btn">{{ 'Cancel' | trans}}</a>
+        </div>
     </footer>
 </form>
 
