CSS fix for zoombar, spaceless template

--- a/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
+++ b/src/Mapbender/CoreBundle/Resources/views/Element/zoombar.html.twig
@@ -1,3 +1,4 @@
+{% spaceless %}
 <div id="{{ id }}" class="mb-element mb-element-zoombar">
     <div class="pan">
         <a class="pan-up" title="{{ "Pan up" | trans }}"></a>
@@ -31,3 +32,4 @@
 
     <div class="bottom"></div>
 </div>
+{% endspaceless %}
